Update jvm flags